# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: run_test.yml
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/fixtures/: labels.json
labels/locale/ru/LC_MESSAGES/: django.mo  django.po
labels/migrations/: 0001_initial.py
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/fixtures/: statuses.json
statuses/migrations/: 0001_initial.py  0002_alter_status_options.py
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: label_create.html  label_delete.html  label_update.html  labels.html
task_manager/templates/layouts/: application.html
task_manager/templates/statuses/: status_create.html  status_delete.html  status_update.html  statuses.html
task_manager/templates/tasks/: list_tasks.html  task_create.html  task_delete.html  task_detail.html  task_update.html  tasks.html
task_manager/templates/users/: list_users.html  login.html  user_create.html  user_delete.html  user_update.html  users.html
tasks/: forms.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: tasks.json
tasks/locale/ru/LC_MESSAGES/: django.mo  (+1 more)
tasks/migrations/: 0001_initial.py  0002_initial.py  0002_task_label_alter_task_executor.py
users/: forms.py  models.py  tests.py  urls.py  views.py
users/fixtures/: users.json
users/migrations/: 0001_initial.py
(+6 files in other folders)
