[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["Sergei Demchenko <hb13718@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10.5"
django = "^4.1.9"
python-dotenv = "^1.0.0"
dj-database-url = "^1.2.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
whitenoise = "^6.4.0"
django-bootstrap4 = "^22.3"
django-filter = "^23.1"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
django-extensions = "^3.2.1"
ipython = "^8.11.0"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
task_manager = "manage.py:main"
